import {hashingIdGen} from "../src/id-generation.ts"
import {ModelAPI, updateSettings} from "../src/api.ts"
import {nameBasedConceptDeducerFor} from "../src/m3/functions.ts"
import {libraryLanguage} from "./m3/library-language.ts"
import {Node} from "../src/mod.ts"


export enum BookType {
    Normal,
    Special,
}
// Note: don't want to (have to) adjust this definition to "fit" with [de-]serialization ==> leave as-is!

// all enumerations in a lookup table, making use of the fact that at runtime a TS enum is also a value (an object):
const rtEnums: { [enumKey: string]: unknown } = {
    "BookType": BookType
}

export type BaseNode = Node & {
    concept: string
}

export type Book = BaseNode & {
    concept: "Book"
    title: string
    pages: number
    author: Writer
    type?: BookType
}

export type Library = BaseNode & {
    concept: "Library"
    name: string
    books: Book[]
}

export type Writer = {   // abstract
    name: string
}

export type GuideBookWriter = Writer & BaseNode & {
    concept: "GuideBookWriter"
    countries: string
}

export type SpecialistBookWriter = Writer & BaseNode & {
    concept: "SpecialistBookWriter"
    subject: string
}


export const libraryModelApi: ModelAPI<BaseNode> = {
    conceptOf: (node) => nameBasedConceptDeducerFor(libraryLanguage)(node.concept),
    getFeatureValue: (node, feature) =>
        (node as any)[feature.name],
    enumerationLiteralFrom: (value, enumeration) => {
        const rtEnum = rtEnums[enumeration.key] as any
        const targetKey = rtEnum[value as number]
        return enumeration.literals.find(({key}) => key === targetKey)
            ?? null     // (undefined -> null)
    },
    nodeFor: (_parent, concept, id, _settings) => ({
        id,
        concept: concept.name
    }),
    setFeatureValue: updateSettings,
    encodingOf: (literal) => {
        const rtEnum = rtEnums[literal.enumeration.key] as any
        return rtEnum[literal.key as unknown as number]
    }
        /*
         * This is a trick that uses TypeScript's reverse mappings for enumerations
         * (@see https://www.typescriptlang.org/docs/handbook/enums.html#reverse-mappings).
         * Unfortunately, it requires some "fugly" type casting to compile:
         *  'key' really is a string containing the enumeration literal's name.
         */
}
/*
 * This {@link ModelAPI} implementation shows the problems that enumerations cause with TypeScript (or even: in general).
 * A TS enum is a type and not an object as far as TS is concerned, which means that reflecting on it requires some jury-rigging through type-casting.
 */


const id = hashingIdGen()

const jackLondon: GuideBookWriter = {
    id: id("Jack London"),
    concept: "GuideBookWriter",
    name: "Jack London",
    countries: "Alaska" // (not a country...)
}

const explorerBook: Book = {
    id: id("Explorer Book"),
    concept: "Book",
    title: "Explorer Book",
    author: jackLondon,
    pages: 1337,
    type: BookType.Special
}

const bobLibrary: Library = {
    id: id("Bob's Library"),
    concept: "Library",
    name: "Bob's Library",
    books: [
        explorerBook
    ]
}

export const libraryModel: BaseNode[] = [
    bobLibrary,
    jackLondon
]

