@startuml
hide empty members

' qualified name: "library"


class Book {
  title: String
  pages: Integer
  type: BookType <<optional>>
}

enum BookType {
  Normal
  Special
}

class GuideBookWriter extends Writer {
  countries: String
}

class Library {
  name: String
}

class SpecialistBookWriter extends Writer {
  subject: String
}

class Writer {
  name: String
}



' relations:

Book "*" -- "1" Writer: author


Library "1" o-- "*" Book: books



@enduml
